[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Login.gd" type="Script" id=1]

[node name="Login" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
margin_left = 510.0
margin_top = 240.0
margin_right = 820.0
margin_bottom = 440.0

[node name="HostLabel" type="Label" parent="UI/Panel"]
editor/display_folded = true
margin_left = 11.0
margin_top = 10.0
margin_right = 51.0
margin_bottom = 24.0
text = "Host"

[node name="HostInput" type="LineEdit" parent="UI/Panel/HostLabel"]
margin_left = 72.0
margin_top = -4.0
margin_right = 292.0
margin_bottom = 20.0
text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5

[node name="PortLabel" type="Label" parent="UI/Panel"]
editor/display_folded = true
margin_left = 10.0
margin_top = 45.0
margin_right = 50.0
margin_bottom = 59.0
text = "Port"

[node name="PortInput" type="LineEdit" parent="UI/Panel/PortLabel"]
margin_left = 72.0
margin_top = -4.0
margin_right = 292.0
margin_bottom = 20.0
text = "9933"
caret_blink = true
caret_blink_speed = 0.5

[node name="UserLabel" type="Label" parent="UI/Panel"]
editor/display_folded = true
margin_left = 12.0
margin_top = 81.0
margin_right = 78.0
margin_bottom = 95.0
text = "Username"

[node name="UserInput" type="LineEdit" parent="UI/Panel/UserLabel"]
margin_left = 72.0
margin_top = -4.0
margin_right = 292.0
margin_bottom = 20.0
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordLabel" type="Label" parent="UI/Panel"]
editor/display_folded = true
margin_left = 11.0
margin_top = 114.0
margin_right = 77.0
margin_bottom = 128.0
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="UI/Panel/PasswordLabel"]
margin_left = 72.0
margin_top = -4.0
margin_right = 292.0
margin_bottom = 20.0
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Connect" type="Button" parent="UI/Panel"]
margin_left = 10.0
margin_top = 140.0
margin_right = 140.0
margin_bottom = 160.0
text = "CONNECT"

[node name="Disconnect" type="Button" parent="UI/Panel"]
margin_left = 170.0
margin_top = 140.0
margin_right = 299.0
margin_bottom = 160.0
disabled = true
text = "DISCONNECT"

[node name="ServerMessage" type="Label" parent="UI/Panel"]
margin_left = 12.0
margin_top = 170.0
margin_right = 299.0
margin_bottom = 190.0

[connection signal="pressed" from="UI/Panel/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="UI/Panel/Disconnect" to="." method="_on_disconnect_pressed"]
